# jirabot

./: .cursorrules  .gitignore  CONTRIBUTING.md  Makefile  README.md  SETUP.md  download_epic_issues.py  download_story_subtasks.py  env_template.txt  pyproject.toml  pytest.ini  requirements.txt
scripts/: download_epic_issues.py  download_story_subtasks.py
src/api/: jira_client.py
src/config/: settings.py
src/models/: jira_models.py
src/utils/: cli_helpers.py  file_utils.py  jira_formatters.py  markdown_generators.py
tests/: README.md  test_download_story_subtasks.py  test_jira_client.py
